# inertia

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.rst  README.md  pyproject.toml
.github/workflows/: tests_and_coverage.yml
inertia/: __init__.py  __main__.py  _browser.py  _config.py  _main.py  _pom.py  main.py
integrations/pytest/: plugin.py
tests/_webserver/: server.py
tests/_webserver/pages/: simple_test.html
tests/integration/: conftest.py  test_integration.py
tests/unit/: test_placeholder.py
