
[tool.poetry]
name = "inertia"
version = "0.1.0"
description = "A python automation framework for modern web applications"
authors = ["symonk <jackofspaces@gmail.com>"]
exclude = ["integrations/"]
include = ["inertia"]

[tool.poetry.scripts]
inertia = "inertia.__main__:main"

[tool.poetry.dependencies]
python = "^3.8"
playwright = "1.26.1"

[tool.poetry.dev-dependencies]
pytest = "7.1.3"
tox = "^3.26.0"
mypy = "^0.982"
pre-commit = "^2.20.0"
codecov = "^2.1.12"
mkdocs = "^1.4.2"
mkdocs-material = "^8.5.6"
coverage = "^6.5.0"
towncrier = "^22.8.0"
poetryup = "^0.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "preload_page: autoloads a page for integration tests"
]
filterwarnings = [
    "ignore:RequestsDependencyWarning:"
]

[tool.isort]
multi_line_output = 3
include_trailing_comma = 'True'
force_grid_wrap = 0
use_parentheses = 'True'
ensure_newline_before_comments = 'True'
line_length = 120
force_single_line = 'True'
known_first_party = 'inertia'
default_section = 'THIRDPARTY'
forced_separate = 'tests'
skip = '.tox,.eggs,ci/templates'

[tool.mypy]
mypy_path = '/inertia'
check_untyped_defs = 'True'
disallow_any_generics = 'True'
ignore_missing_imports = 'False'
show_error_codes = 'True'
strict_equality = 'True'
warn_redundant_casts = 'True'
warn_return_any = 'False'
warn_unreachable = 'True'
warn_unused_configs = 'True'
no_implicit_reexport = 'False'
ignore_errors = 'False'

[tool.black]
target-version = ['py310']
line-length = 120

[tool.flake8]
# flake8 does not currently support pyproject.toml (handle via pre-commit directly).

[tool.towncrier]
package = "inertia"
directory = "changelog/"
filename = "doc/en/changelog.rst"
title_format = "Inertial {version} ({project_date})"
single_file = true
name = "Inertia"
template = "changelog/template.rst"
all_bullets = true

  [[tool.towncrier.type]]
  directory = "breaking"
  name = "Breaking Changes"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "deprecation"
  name = "Deprecations"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "feature"
  name = "Features"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "improvement"
  name = "Improvements"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "bugfix"
  name = "Bug Fixes"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "vendor"
  name = "Vendored Libraries"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "doc"
  name = "Improved Documentation"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "trivial"
  name = "Trivial/Internal Changes"
